fix: some layout issues
also, add the damacha logo

--- a/app/[slug]/page.module.css
+++ b/app/[slug]/page.module.css
@@ -15,6 +15,10 @@
   align-items: center;
 }
 
+.top > span {
+  margin-right: 10px;
+}
+
 .title {
   margin-bottom: 10px;
 }
